syntax = "proto3";

package tieba;

option java_package = "com.huanchengfly.tieba.post.api.models.protos";

message CommonRequest {
  int32  _client_type = 1;
  string _client_version = 2;
  string _client_id = 3;
  string _phone_imei = 5;
  string from = 6;
  string cuid = 7;
  int64 _timestamp = 8;
  string model = 9;
  optional string BDUSS = 10;
  optional string tbs = 11;
  int32 net_type = 12;
  string _phone_newimei = 14;
  optional string sign = 23;
  string pversion = 24;
  string _os_version = 25;
  string brand = 26;
  string lego_lib_version = 28;
  optional string applist = 29;
  optional string stoken = 30;
  optional string z_id = 31;
  string cuid_galaxy2 = 32;
  optional string cuid_gid = 33;
  optional string oaid = 34;
  string c3_aid = 35;
  optional string sample_id = 36;
  int32 scr_w = 37;
  int32 scr_h = 38;
  double scr_dip = 39;
  optional int32 q_type = 40;
  optional int32 is_teenager = 41;
  string sdk_ver = 42;
  string framework_ver = 43;
  string swan_game_ver = 44;
  int64 active_timestamp = 49;
  int64 first_install_time = 50;
  int64 last_update_time = 51;
  string event_day = 53;
  string android_id = 54;
  int32 cmode = 55;
  optional string start_scheme = 56;
  int32 start_type = 57;
  optional string extra = 61;
  string user_agent = 62;
  int32 personalized_rec_switch = 63;
  string device_score = 70;
}