syntax = "proto3";

package tieba.threadList;

option java_package = "com.huanchengfly.tieba.post.api.models.protos.threadList";

message AdParam {
  int32 load_count = 1;
  int32 refresh_count = 2;
  optional string yoga_lib_version = 3;
}